updated version to `0.2.3-alpha` - HOTFIX fix: no visible signal lamps in firefox browser due to missing px unit in css-class `.signalLamp` fix: fixed track bridging in Warszawa Wlochy

--- a/src/applications/srto/srto-worker/srto-canvas/srto-canvas.css
+++ b/src/applications/srto/srto-worker/srto-canvas/srto-canvas.css
@@ -115,7 +115,7 @@
 }
 
 .signalLamp {
-    r: 11;
+    r: 11px;
     stroke-width: 2;
     stroke: black;
 }
